# Vitis-AI

examples/vai_library/samples_onnx/yolov8/: test_yolov8_onnx.cpp
model_zoo/: CMakeLists.txt  DPU.cpp  DPU.hpp  Object.h  ResNet50.cpp  ResNet50.hpp  YOLOX.cpp  YOLOX.h  YOLOv8.cpp  YOLOv8.hpp
model_zoo/PythonDPU/: CMakeLists.txt  DPU.cpp  DPU.hpp  ResNet50.cpp  ResNet50.hpp  Wrapper.cpp  YOLOv8.hpp
model_zoo/wide_resnet50_2/: README.md  WideResNet50_2.py  build.sh  categories.txt  export_onnx.py  main.cpp  quantize.py  wide_resnet50_2.prototxt
model_zoo/yolov6/: 80categories.h  CMakeLists.txt  DPU.cpp  Object.cpp  YOLOv8.cpp
model_zoo/yolov6m_pt/: md5sum.txt  meta.json  yolov6m_pt.prototxt
model_zoo/yolov8/: COCODataReader.py  Segmentation.py
